fix images on mobile

--- a/assets/discord.css
+++ b/assets/discord.css
@@ -222,7 +222,7 @@
 }
 .discord-attachment .discord-image-wrapper img,
 .discord-attachment .discord-image-wrapper video {
-	max-width: 500px;
+	max-width: min(100%, 500px);
 	height: auto;
 }
 
